fixed contact form on small devices

--- a/src/components/sections/Contact/Contact.module.sass
+++ b/src/components/sections/Contact/Contact.module.sass
@@ -2,6 +2,7 @@
 @use '../../../styles/_mixins'
 .contact
     width: 100%
+    position: relative
     background-color: variables.$bright-secondary-color
     display: flex
     justify-content: center
@@ -12,11 +13,16 @@
         width: 80%
         display: flex
         justify-content: center
+        @include mixins.breakpoint(large)
+            padding: 2rem 0rem
         .form
             display: flex
             width: 50%
             flex-direction: column
             @include mixins.breakpoint(large)
+                width: 80%
+                height: fit-content
+            @include mixins.breakpoint(medium)
                 width: 100%
             .errMessage
                 color: red
