--- a/src/components/sections/CustomerPhoto/CustomerPhoto.module.sass
+++ b/src/components/sections/CustomerPhoto/CustomerPhoto.module.sass
@@ -4,7 +4,7 @@
 .customerPhoto
     background-color: variables.$bright-primary-color
     width: 100%
-    height: 100vh
+    height: fit-content
     padding: 1rem 0rem
     @include mixins.breakpoint(large)
         height: fit-content
