--- a/src/components/sections/Models/ModelPhoto/ModelPhoto.module.sass
+++ b/src/components/sections/Models/ModelPhoto/ModelPhoto.module.sass
@@ -21,5 +21,5 @@
             width: 400px
             height: 240px
             @include mixins.breakpoint(large)
-                width: 350px
-                height: 200px
+                width: 100%
+                height: 100%
